# dim

./: Cargo.toml  README.md  rust-toolchain
src/: config.rs  dirs.rs  lib.rs  main.rs  repository.rs  setup.rs  sync.rs
src/credentials/: ssh.rs
src/repository/: https.rs  ssh.rs
