[package]
name = "dimport"
author = "lyr-7d1h <lyr-7d1h@pm.me>"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.18",features=["derive"]}
git2 = "^0.14.2"
dirs = "4.0.0"
ssh2 = { version = "0.9.3", features = ["vendored-openssl"] }